--- a/app/src/main/res/drawable/button_background_primary.xml
+++ b/app/src/main/res/drawable/button_background_primary.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <stroke android:width="4dp" android:color="#000"/>
-    <solid android:color="#af9164"/>
+    <solid android:color="@color/button_background_primary"/>
     <corners android:radius="12dp" />
 </shape>
