--- a/app/src/main/res/drawable/button_background_second.xml
+++ b/app/src/main/res/drawable/button_background_second.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
+    <stroke android:width="4dp" android:color="#000"/>
+    <solid android:color="@color/button_background_second"/>
+    <corners android:radius="12dp" />
+</shape>
