--- a/app/src/main/res/layout/activity_story_details.xml
+++ b/app/src/main/res/layout/activity_story_details.xml
@@ -1,10 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".StoryDetailsActivity">
+    tools:context=".StoryDetailsActivity"
+    android:background="@drawable/story_details_background"
+    android:paddingTop="20dp"
+    android:paddingBottom="20dp"
+    android:paddingLeft="70dp"
+    android:paddingRight="70dp"
+    android:orientation="vertical"
+    >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="7"
+        android:orientation="vertical"
+        >
+        <TextView
+            android:id="@+id/story_name_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_background_second"
+            android:text="@string/fetching_data_from_server"
+            android:textColor="#fff"
+            android:gravity="center"
+            android:padding="10dp"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:text="invisible"
+            android:visibility="invisible"
+            />
+        <TextView
+            android:id="@+id/story_genre_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/fetching_data_from_server"
+            android:textColor="#000"
+            android:textSize="25sp"
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_background_second"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="@string/description"
+            android:textColor="#fff"
+            />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="10"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="0dp"
+        >
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/water_background2"
+            android:paddingTop="20dp"
+            android:paddingBottom="20dp"
+            android:paddingRight="10dp"
+            android:paddingLeft="10dp"
+            >
+
+            <EditText
+                android:id="@+id/story_description_text_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/fetching_data_from_server"
+                android:textSize="16sp"
+                />
+        </ScrollView>
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/playCreate_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button_background_primary"
+        android:paddingLeft="40dp"
+        android:paddingRight="40dp"
+        android:text="@string/play"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginBottom="20dp"
+        />
+</LinearLayout>
