--- a/app/src/main/res/layout/activity_story_details.xml
+++ b/app/src/main/res/layout/activity_story_details.xml
@@ -19,8 +19,8 @@
         android:layout_weight="7"
         android:orientation="vertical"
         >
-        <TextView
-            android:id="@+id/story_name_text_view"
+        <EditText
+            android:id="@+id/story_name_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/button_background_second"
@@ -77,7 +77,7 @@
             >
 
             <EditText
-                android:id="@+id/story_description_text_view"
+                android:id="@+id/story_description_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
