--- a/app/src/main/res/drawable/page_background.xml
+++ b/app/src/main/res/drawable/page_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
+    <solid android:color="@color/water_background"/>
     <stroke android:width="2dp" android:color="#000"/>
-    <solid android:color="@color/button_background_primary"/>
     <corners android:radius="12dp" />
 </shape>
