--- a/app/src/main/res/layout/activity_story_beginning_page.xml
+++ b/app/src/main/res/layout/activity_story_beginning_page.xml
@@ -77,10 +77,25 @@
                 />
             <Button
                 android:id="@+id/create_story_button"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
                 android:background="@drawable/button_background_primary"
                 android:text="Criar História"
+                android:paddingLeft="30dp"
+                android:paddingRight="30dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:layout_marginTop="20dp"
+                />
+            <Button
+                android:id="@+id/end_story_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/button_background_danger"
+                android:text="Encerrar aqui"
+                android:textColor="#fff"
                 android:paddingLeft="30dp"
                 android:paddingRight="30dp"
                 android:paddingTop="10dp"
