--- a/app/src/main/res/layout/activity_choices.xml
+++ b/app/src/main/res/layout/activity_choices.xml
@@ -20,6 +20,7 @@
         >
 
         <LinearLayout
+            android:id="@+id/choices_activity_linear_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -34,6 +35,7 @@
                 android:minLines="10"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
+                android:layout_marginBottom="10dp"
                 android:gravity="start"
                 android:textSize="25sp"
                 />
@@ -45,7 +47,7 @@
                 android:layout_marginRight="30dp"
                 android:background="@drawable/button_background_second"
                 android:padding="10dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 android:gravity="center"
                 android:textSize="20sp"
                 />
@@ -61,7 +63,6 @@
                 android:gravity="center"
                 android:textSize="20sp"
                 />
-
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
